feat: enhance proctoring and secure timer